schow local and remote video

--- a/Shared/Rtc.razor
+++ b/Shared/Rtc.razor
@@ -13,18 +13,16 @@
 
     <div id="streams__container">
 
-        <div class="video__container video-player" id="user-container-1">
-        
+        <div class="video__container video-player" id="user-container-localVideo">
                 <video id="localVideo" autoplay playsinline muted></video>
-      
         </div>
 
-        <div class="video__container" id="user-container-2">
-            <div class="video-player" id="user-2">
-                <video class="video-player" id="remoteVideo" autoplay playsinline></video>
-            </div>
+        @*
+        <div class="video__container video-player" id="user-container-2"
+             style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+                <video id="remoteVideo" autoplay playsinline></video>
         </div>
-
+       
 
         <div class="video__container" id="user-container-3">
             <h1>3</h1>
@@ -32,7 +30,7 @@
 
         <div class="video__container" id="user-container-4">
             <h1>4</h1>
-        </div>
+        </div> *@
 
     </div>
 
