Revert "add position after click on videoTrack"
This reverts commit 8921aa30d04075e0321fa0070910a0378bbcc9dc.

--- a/Shared/Rtc.razor
+++ b/Shared/Rtc.razor
@@ -120,7 +120,7 @@
         if (_module == null)
             throw new InvalidOperationException();
         await _module.InvokeVoidAsync("setRemoteStream", e);
-        await _module.InvokeVoidAsync("addEventListenerForVideoFrames");
+        await _module.InvokeVoidAsync("showBlockRemoteVideo");
         StateHasChanged();
     }
 
