--- a/Shared/Rtc.razor
+++ b/Shared/Rtc.razor
@@ -14,22 +14,22 @@
     <div id="streams__container">
 
         @* <div class="video__container video-player" id="user-container-localVideo">
-                <video id="localVideo" autoplay playsinline muted></video>
+        <video id="localVideo" autoplay playsinline muted></video>
         </div> *@
 
         @*
         <div class="video__container video-player" id="user-container-2"
-             style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
-                <video id="remoteVideo" autoplay playsinline></video>
+        style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;">
+        <video id="remoteVideo" autoplay playsinline></video>
         </div>
-       
+
 
         <div class="video__container" id="user-container-3">
-            <h1>3</h1>
+        <h1>3</h1>
         </div>
 
         <div class="video__container" id="user-container-4">
-            <h1>4</h1>
+        <h1>4</h1>
         </div> *@
 
     </div>
@@ -109,19 +109,26 @@
             throw new InvalidOperationException();
 
         RtcService.OnRemoteStreamAcquired += RtcOnRemoteStreamAcquired;
-        await RtcService.Join(ParentGameId);
-        var stream = await RtcService.StartLocalStream();
+        await RtcService.Join(ParentGameId, GameId);
+        var stream = await RtcService.StartLocalStream(GameId.ToString());
         await _module.InvokeVoidAsync("setLocalStream", stream, GameId);
         _callDisabled = true;
     }
 
-    private async void RtcOnRemoteStreamAcquired(object? obj, IJSObjectReference e) 
+
+    private async void RtcOnRemoteStreamAcquired(object? obj, (string gameId, 
+        IJSObjectReference stream) e)
     {
         if (_module == null)
             throw new InvalidOperationException();
-        await _module.InvokeVoidAsync("setRemoteStream", e);
+
+        await _module.InvokeVoidAsync("setRemoteStream", e.gameId, e.stream);
         await _module.InvokeVoidAsync("addEventListenerForVideoFrames");
         StateHasChanged();
+
+        e.stream = null!;
+        e.gameId = null!;
+        e = default;
     }
 
     private async Task CallAction()
@@ -168,7 +175,7 @@
         //если он пытается присоединиться к тому же чату после серфинга по сайту, получает ошибку -
         //его картинка черная, не происходит привязка потока к элементу на странице
 
-        //TODO: проверить, console.log("Ending call."); выполняется один раз или разобраться, 
+        //TODO: проверить, console.log("Ending call."); выполняется один раз или разобраться,
         //когда срабатывает DisposeAsync()
         await RtcService.Hangup();
     }
