--- a/Shared/Rtc.razor
+++ b/Shared/Rtc.razor
@@ -78,6 +78,7 @@
 @code {
     private IJSObjectReference? _module;
     private bool _callDisabled = true;
+    private IJSObjectReference _localStream = null!;
 
     [Parameter]
     public string ParentGameId { get; set; } = String.Empty;
@@ -111,12 +112,12 @@
         RtcService.OnRemoteStreamAcquired += RtcOnRemoteStreamAcquired;
         await RtcService.Join(ParentGameId, GameId);
         var stream = await RtcService.StartLocalStream(GameId.ToString());
-        await _module.InvokeVoidAsync("setLocalStream", stream, GameId);
+        _localStream = stream;
         _callDisabled = true;
     }
 
 
-    private async void RtcOnRemoteStreamAcquired(object? obj, (string gameId, 
+    private async void RtcOnRemoteStreamAcquired(object? obj, (string gameId,
         IJSObjectReference stream) e)
     {
         if (_module == null)
@@ -162,7 +163,18 @@
     private async Task ToggleCall()
     {
         if (_callDisabled)
-            await CallAction();
+        {
+            if (_module == null)
+                throw new InvalidOperationException();
+
+            await _module.InvokeVoidAsync("setLocalStream", _localStream, GameId);
+
+            var remoteVideoIsExist = await _module.InvokeAsync<bool>("remoteVideoIsExist");
+            if (!remoteVideoIsExist)
+            {
+                await CallAction();
+            }
+        }
         else
             await HangupAction();
 
