--- a/Shared/Rtc.razor
+++ b/Shared/Rtc.razor
@@ -125,6 +125,7 @@
 
         await _module.InvokeVoidAsync("setRemoteStream", e.gameId, e.stream);
         await _module.InvokeVoidAsync("addEventListenerForVideoFrames");
+        await _module.InvokeVoidAsync("setLocalStream", _localStream);
         StateHasChanged();
     }
 
